Update KruskalAlg.java